--- a/app/src/main/res/layout/call_widget.xml
+++ b/app/src/main/res/layout/call_widget.xml
@@ -3,17 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/Theme.Callwidget.AppWidgetContainer">
+    <ImageView
+        android:id="@+id/appwidget_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+    </ImageView>
     <TextView
-        android:id="@+id/appwidget_text"
+        android:id="@+id/appwidget_id"
         style="@style/Widget.Callwidget.AppWidget.InnerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:contentDescription="@string/appwidget_text"
-        android:text="@string/appwidget_text"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:layout_margin="0dp"
+        android:textSize="0sp"
+        android:visibility="invisible"
+        />
 </RelativeLayout>
